# cs294-white-agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: server.py
white_agent/: __init__.py  config.py  core.py  prompt_agent.py  prompts.py  qwen_utils.py
white_agent/a2a/: Dockerfile  __init__.py  controller.py  run.sh  server.py
white_agent/accessibility_tree_wrap/: __init__.py
white_agent/rest/: Dockerfile  __init__.py  run.sh  server.py
