[project]
name = "cs294-white-agent"
version = "1.0.0"
description = "OSWorld White Agent - A2A compliant agent for desktop automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core web framework
    "fastapi>=0.121.1",
    "uvicorn>=0.30.6",
    "starlette>=0.27.0",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",

    # A2A protocol SDK
    "a2a-sdk[http-server]>=0.3.20",

    # LLM providers
    "openai>=1.35.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",

    # Image processing
    "Pillow>=10.4.0",

    # Utils
    "python-dotenv>=1.2.1",
    "lxml>=5.3.0",
    "backoff>=2.2.1",
    "requests>=2.32.3",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "white_agent"]
